--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ Fix Alerts
     <!--Welcome Screen-->
     <div id="welcomeContainer" class="animated">
         <div id="welcomeScreen">
-            <h1>Welcome to Sign Language Translator</h1>
-            <h3 class="animated fadeInUp delay-2s">Sufiyaan Nadeem</h3>
+            <h1>Sign Language Translator</h1>
+            <h3 class="animated fadeInUp delay-2s">From Sufiyaan Nadeem, reworked by Cloud Access Team</h3>
         </div>
         <button id="proceedButton">Proceed</button>
     </div>
@@ -34,12 +34,12 @@ Fix Alerts
     <!--Title bar explains the stage of the program 
     (eg: instructions for Training, Prediction, and Video Chat)-->
     <div id="titleBar">
-        <h1 id="stage">Train Gestures</h1>
-        <h3 id="steps">Train about 30 samples of your Start Gesture and 30 for your idle, Stop Gesture.</h3>
+        <h1 id="stage">Translate Gestures</h1>
+        <h3 id="steps">Click Translate to start Translating.</h3>
         <button id="nextButton" class="animated flash delay-3s">Next</button>
         <button id="predictButton" class="animated flash slideInRight faster">Translate</button>
-        <button id="backButton" class="animated slideInLeft faster">Back to Training</button>
-        <button id="videoCallBtn" class="videoCallBtn animated slideInRight faster">Video Call</button>
+        <button id="backButton" class="animated slideInLeft faster">Stop Translate</button>
+        <!-- <button id="videoCallBtn" class="videoCallBtn animated slideInRight faster">Video Call</button> -->
     </div>
 
     <!--Status bar shows the status of translation-->
@@ -52,7 +52,7 @@ Fix Alerts
     <div id="translatorWindow">
 
         <!--Initial Training Holder creates the screen where users train Start and Stop Gestures-->
-        <div id="initialTrainingHolder">
+        <!-- <div id="initialTrainingHolder">
             <img src="" alt="checkmark" id="checkmark_startButton" class="checkMark">
             <button id="startButton" class="trainButton ">Start Gesture</button>
             <button id="clear_startButton" class="clearButton">Clear</button>
@@ -62,7 +62,7 @@ Fix Alerts
             <button id="clear_stopButton" class="clearButton">Clear</button>
             <h3 id="counter_stopButton" class="counter"></h3>
             <img src="" alt="checkmark" id="checkmark_stopButton" class="checkMark">
-        </div>
+        </div> -->
 
         <!--Video Holder displays the video feed from the user for training and translation.
         It also displays the Video Call feed once the user decides to do that-->
@@ -73,7 +73,7 @@ Fix Alerts
         </div>
 
         <!--Training Holder displays the screen where users add and train new gestures-->
-        <div id="trainingHolder">
+        <!-- <div id="trainingHolder">
             <h5 id="add-gesture">Add Gesture</h5>
             <img src="Images/plus_sign.svg" alt="Plus Sign" id="plus_sign" class="plus_sign animated">
             <form id="add-word" autocomplete="off">
@@ -83,7 +83,7 @@ Fix Alerts
             <button id="doneRetrain" class="doneRetrain">Done Retraining</button>
 
             <div id="trainingCommands"></div>
-        </div>
+        </div> -->
 
         <!--Translation Holder is where the Gesture Card and Text that was translated is displayed.-->
         <div id="translationHolder">
